versão 7.0.0